--- a/html/example_01_basic.html
+++ b/html/example_01_basic.html
@@ -11,18 +11,18 @@
  	<p>{{name + " " + firstName}}</p>
 </div>
 
+<div ng-app="myApp" ng-controller="myCtrl">
+ 	<p>firstName: <input type="text" ng-model="firstName"></p>
+ 	<p>lastName: <input type="text" ng-model="lastName"></p>
+ 	<p>{{firstname + " " + lastName}}</p>
+</div>
+
 <script type="text/javascript">
 var app = angular.module('myApp', []);
 app.controller('myCtrl', function($scope) {
     $scope.firstName= "John";
     $scope.lastName= "Doe";
 });
-
-var app = angular.module("myApp",[]);
-app.controller('myCtrl',function($scope) {
-	$scope.firstName = "Mike";
-	$scope.lastName = "Gu";
-})
 </script>
 </body>
 </html>
