--- a/html/example_16_validation.html
+++ b/html/example_16_validation.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
-<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+<head>
+  <title>AngularJS</title>
+  <script type="text/javascript" src="https://cdn.bootcss.com/angular.js/1.4.8/angular.min.js"></script>
+</head>
 <body>
 
 <h2>Validation Example</h2>
 
 <form  ng-app="myApp"  ng-controller="validateCtrl"
-name="myForm" novalidate>
+name="myForm" novalidate>   <!-- 加novalidate是为了阻止浏览器默认的验证操作 -->
 
 <p>Username:<br>
   <input type="text" name="user" ng-model="user" required>
